@@ -143,7 +143,7 @@ The new "platform" setting
 
 A testenv can define a new ``platform`` setting.  If its value
 is not contained in the string obtained from calling 
-``platform.platform()`` the environment will be skipped.
+``sys.platform`` the environment will be skipped.
 
 Expanding the ``envlist`` setting
 ----------------------------------------------------------
